fix: adding tools and LLM OpenAI

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -9,6 +9,18 @@
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e02ce64f",
+   "metadata": {},
+   "source": [
+    "ao clicar em válidar com IA me retornou essa mensagem:\n",
+    "\n",
+    "• Erro ao processar coluna 'matricula' - verifique se os dados estão no formato correto\n",
+    "\n",
+    "A IA não poderia identificar os errosmostralos e já corrigir os erros encontrado nos arquivos antes de gerar os relatórios, seria uma maneira mais inteligente de utilizar o llm nesse caso não seria?"
+   ]
   }
  ],
  "metadata": {
